--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
   
+  firebase_auth: ^4.2.1
   firebase_core: ^2.31.1
   cloud_firestore: ^4.17.4
-  firebase_auth: ^4.2.1
   google_sign_in: ^6.2.1
+  sign_in_button: ^3.2.0 
 
 dev_dependencies:
   flutter_test:
