--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cloud_firestore: ^4.17.4
   google_sign_in: ^6.2.1
   sign_in_button: ^3.2.0 
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
