--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "marginpoint",
-    "short_name": "marginpoint",
+    "name": "babyparadise",
+    "short_name": "babyparadise",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
